FIX: explore table alignment

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1544,6 +1544,7 @@ input[list]::-ms-clear {
         padding: .5rem;
         text-align: left;
         border-bottom: 2px solid colors.color("color-neutral-200");
+        vertical-align: middle;
     }
 
     td:first-child {
